# joplin-cli

./: .gitignore  README.md  README_ZH.md  pyproject.toml
.github/workflows/: release.yml
src/joplin_cli/: __init__.py
src/joplin_cli/cli/: app.py  diagnostics.py  errors.py  output.py  params.py
src/joplin_cli/cli/commands/: __init__.py  alias.py  batch.py  config.py  diagnostics.py  notebooks.py  notes.py  resources.py  search.py  tags.py  todos.py
src/joplin_cli/sdk/: auth.py  client.py  config.py  errors.py  http.py  models.py  pagination.py
src/joplin_cli/sdk/services/: _pagination.py  batch.py  notebooks.py  notes.py  resources.py  search.py  tags.py  todos.py
tests/: test_dev_dependencies.py  test_package_metadata.py  test_readme_quality.py  test_release_workflow.py
tests/cli/: test_batch_commands.py  test_cli_support.py  test_core_commands.py  test_diagnostics_commands.py  test_resource_commands.py
tests/live/: test_live_joplin.py
tests/sdk/: test_auth.py  test_batch.py  test_http_client.py  test_notes_and_notebooks.py  test_pagination.py  test_secondary_services.py
