[project]
name = "joplin-cli"
version = "0.1.2"
description = "Agent-friendly CLI and SDK for local Joplin desktop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "platformdirs>=4.2",
  "typer>=0.12",
]

[project.scripts]
joplin-cli = "joplin_cli.cli.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joplin_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
