[project]
name = "joplin-cli"
version = "0.1.3"
description = "Agent-friendly CLI and SDK for local Joplin desktop"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "agent-friendly",
  "automation",
  "cli",
  "joplin",
  "joplin-api",
  "markdown",
  "note-taking",
  "notes",
  "python",
  "sdk",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "platformdirs>=4.2",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/AndersonBY/joplin-cli"
Repository = "https://github.com/AndersonBY/joplin-cli"
Issues = "https://github.com/AndersonBY/joplin-cli/issues"
PyPI = "https://pypi.org/project/joplin-cli/"

[project.scripts]
joplin-cli = "joplin_cli.cli.app:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joplin_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
